--- a/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
+++ b/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPL5n+3FZ08fuhMEv0E6Muz",
+      "authorship_tag": "ABX9TyNvpruri/MtL5onaZIWnSZs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1229,7 +1229,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1376,7 +1376,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1419,7 +1419,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1446,7 +1446,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1473,7 +1473,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1516,7 +1516,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1543,7 +1543,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1568,9 +1568,215 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Create two vectors\n",
+        "vector_a = np.array([1, 2, 3])\n",
+        "vector_b = np.array([4, 5, 6])\n",
+        "\n",
+        "# Calculate dot product\n",
+        "np.dot(vector_a, vector_b)"
+      ],
+      "metadata": {
+        "id": "K5gGTNVjriRD",
+        "outputId": "2b3fccc3-03f9-48c4-f429-f07a6eae1b7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calculate dot product\n",
+        "vector_a @ vector_b"
+      ],
+      "metadata": {
+        "id": "WwA-vRJu-fKm",
+        "outputId": "0c3cb01e-a189-4a4e-ab81-bf283524f5fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Adding and Subtracting Matrices"
+      ],
+      "metadata": {
+        "id": "gwtb_XBQ-u-s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix_a = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Create matrix\n",
+        "matrix_b = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Add two matrices\n",
+        "np.add(matrix_a, matrix_b)"
+      ],
+      "metadata": {
+        "id": "8CRzBetp-lEp",
+        "outputId": "9be1acc4-f8c5-4d3e-f687-6f491500cad9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2,  4,  6],\n",
+              "       [ 8, 10, 12],\n",
+              "       [14, 16, 18]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Subtract two matrices\n",
+        "np.subtract(matrix_a, matrix_b)"
+      ],
+      "metadata": {
+        "id": "mNZvUsVe_Fnm",
+        "outputId": "640cb1b4-2a5d-49c8-dcb5-a0276dc6b4a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0],\n",
+              "       [0, 0, 0],\n",
+              "       [0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Add two matrices\n",
+        "matrix_a + matrix_b"
+      ],
+      "metadata": {
+        "id": "3GQ_Mh6-_Nd7",
+        "outputId": "a7dc0a4c-0c84-4775-ca3b-44a4335fc761",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2,  4,  6],\n",
+              "       [ 8, 10, 12],\n",
+              "       [14, 16, 18]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Subtract two matrices\n",
+        "matrix_a - matrix_b"
+      ],
+      "metadata": {
+        "id": "yDDFMjB6_Uws",
+        "outputId": "32d09a56-48b7-4159-8090-65313295ee23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0],\n",
+              "       [0, 0, 0],\n",
+              "       [0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Multiplying Matrices"
+      ],
+      "metadata": {
+        "id": "rprSzmrv_eC5"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "K5gGTNVjriRD"
+        "id": "MUcnFvGm_ep2"
       },
       "execution_count": null,
       "outputs": []
