--- a/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
+++ b/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvpruri/MtL5onaZIWnSZs",
+      "authorship_tag": "ABX9TyPwmVyeszq+0fHygK9ahI+1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1583,7 +1583,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1610,7 +1610,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,7 +1660,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1689,7 +1689,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1718,7 +1718,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1747,7 +1747,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1774,12 +1774,322 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create matrix\n",
+        "matrix_a = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Create matrix\n",
+        "matrix_b = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Multiply two matrices\n",
+        "np.dot(matrix_a, matrix_b)"
+      ],
       "metadata": {
-        "id": "MUcnFvGm_ep2"
+        "id": "MUcnFvGm_ep2",
+        "outputId": "ea67ecb2-e548-494b-b6f4-e22871b36ca8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 30,  36,  42],\n",
+              "       [ 66,  81,  96],\n",
+              "       [102, 126, 150]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiply two matrices\n",
+        "matrix_a @ matrix_b"
+      ],
+      "metadata": {
+        "id": "v6QI5lM_7_cY",
+        "outputId": "e6816698-00e3-4e27-fabd-a9ceb7c9b4bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 30,  36,  42],\n",
+              "       [ 66,  81,  96],\n",
+              "       [102, 126, 150]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiply two matrices\n",
+        "matrix_a * matrix_b"
+      ],
+      "metadata": {
+        "id": "ftba4y0N8E6G",
+        "outputId": "3dcbb1d8-1a04-40ef-ea67-9a98c3e8c1f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1,  4,  9],\n",
+              "       [16, 25, 36],\n",
+              "       [49, 64, 81]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Inverting a Matrix"
+      ],
+      "metadata": {
+        "id": "EAW2vF398WwG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 4],\n",
+        "    [2, 5]\n",
+        "])\n",
+        "\n",
+        "# Calculate inverse of matrix\n",
+        "np.linalg.inv(matrix)"
+      ],
+      "metadata": {
+        "id": "ikOsZAp58XZW",
+        "outputId": "2acd21ad-52fe-4d80-db7b-c3ef13dfc888",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.66666667,  1.33333333],\n",
+              "       [ 0.66666667, -0.33333333]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiply matrix and its inverse\n",
+        "matrix @ np.linalg.inv(matrix)"
+      ],
+      "metadata": {
+        "id": "twYXtNOO8-6s",
+        "outputId": "580299a6-d8c1-4a98-8d40-f071dedb5a76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.00000000e+00, 0.00000000e+00],\n",
+              "       [1.11022302e-16, 1.00000000e+00]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Generating Random Values"
+      ],
+      "metadata": {
+        "id": "3nWVdcmc9ZCY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set seed\n",
+        "np.random.seed(0)\n",
+        "\n",
+        "# Generate three random floats between 0.0 and 1.0\n",
+        "np.random.random(3)"
+      ],
+      "metadata": {
+        "id": "0XpxEFgM9Zn7",
+        "outputId": "c212632f-94c6-4863-c21e-36eebcf07449",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.5488135 , 0.71518937, 0.60276338])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generate three random integers between 0 and 10\n",
+        "np.random.randint(0, 11, 3)"
+      ],
+      "metadata": {
+        "id": "1myL9rvD9lYQ",
+        "outputId": "308c443b-3a7c-4cd6-c0ef-e2393551bdb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Draw three numbers from a normal distribution with mean 0.0 and standard deviation of 1.0\n",
+        "np.random.normal(0.0, 1.0, 3)"
+      ],
+      "metadata": {
+        "id": "DJ5mq0DL933D",
+        "outputId": "1adfbead-dedd-4181-c95a-dfc5f5394502",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-1.42232584,  1.52006949, -0.29139398])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Draw three numbers from a logistic distribution with mean 0.0 and scale of 1.0\n",
+        "np.random.logistic(0.0, 1.0, 3)"
+      ],
+      "metadata": {
+        "id": "wQyfqQNf-C9O",
+        "outputId": "f6702f4c-11ac-477d-eced-7de55db2b5f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-0.98118713, -0.08939902,  1.46416405])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Draw three numbers greater than or equal to 1.0 and less than 2.0\n",
+        "np.random.uniform(1.0, 2.0, 3)"
+      ],
+      "metadata": {
+        "id": "hmHyI4ej-PEn",
+        "outputId": "d0b23342-1227-4373-bcee-86fe92370434",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.47997717, 1.3927848 , 1.83607876])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
