--- a/machine-learning-with-python-cookbook/02_loading_data.ipynb
+++ b/machine-learning-with-python-cookbook/02_loading_data.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPQlPTYoxjV0kgsxhvgpq6d",
+      "authorship_tag": "ABX9TyOUgNMZ3Hfu6PsYHoj2rJYI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,148 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn import datasets"
+      ],
       "metadata": {
         "id": "hElYEZQMjO3W"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Sample Dataset"
+      ],
+      "metadata": {
+        "id": "bz0yWrkzjj83"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load digits dataset\n",
+        "digits = datasets.load_digits()\n",
+        "\n",
+        "# Create features matrix\n",
+        "features = digits.data\n",
+        "\n",
+        "# Create target vector\n",
+        "target = digits.target\n",
+        "\n",
+        "# View first observation\n",
+        "features[0]"
+      ],
+      "metadata": {
+        "id": "0tP2JHdDjnEV",
+        "outputId": "c5e7c69f-ee3a-44ea-a488-219759cf7ff0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.,  0.,  5., 13.,  9.,  1.,  0.,  0.,  0.,  0., 13., 15., 10.,\n",
+              "       15.,  5.,  0.,  0.,  3., 15.,  2.,  0., 11.,  8.,  0.,  0.,  4.,\n",
+              "       12.,  0.,  0.,  8.,  8.,  0.,  0.,  5.,  8.,  0.,  0.,  9.,  8.,\n",
+              "        0.,  0.,  4., 11.,  0.,  1., 12.,  7.,  0.,  0.,  2., 14.,  5.,\n",
+              "       10., 12.,  0.,  0.,  0.,  0.,  6., 13., 10.,  0.,  0.,  0.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the attribute\n",
+        "print(digits.DESCR)"
+      ],
+      "metadata": {
+        "id": "UIs5PezmkBi-",
+        "outputId": "67a5aea2-b55f-45da-a277-a07d627d8332",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".. _digits_dataset:\n",
+            "\n",
+            "Optical recognition of handwritten digits dataset\n",
+            "--------------------------------------------------\n",
+            "\n",
+            "**Data Set Characteristics:**\n",
+            "\n",
+            "    :Number of Instances: 1797\n",
+            "    :Number of Attributes: 64\n",
+            "    :Attribute Information: 8x8 image of integer pixels in the range 0..16.\n",
+            "    :Missing Attribute Values: None\n",
+            "    :Creator: E. Alpaydin (alpaydin '@' boun.edu.tr)\n",
+            "    :Date: July; 1998\n",
+            "\n",
+            "This is a copy of the test set of the UCI ML hand-written digits datasets\n",
+            "https://archive.ics.uci.edu/ml/datasets/Optical+Recognition+of+Handwritten+Digits\n",
+            "\n",
+            "The data set contains images of hand-written digits: 10 classes where\n",
+            "each class refers to a digit.\n",
+            "\n",
+            "Preprocessing programs made available by NIST were used to extract\n",
+            "normalized bitmaps of handwritten digits from a preprinted form. From a\n",
+            "total of 43 people, 30 contributed to the training set and different 13\n",
+            "to the test set. 32x32 bitmaps are divided into nonoverlapping blocks of\n",
+            "4x4 and the number of on pixels are counted in each block. This generates\n",
+            "an input matrix of 8x8 where each element is an integer in the range\n",
+            "0..16. This reduces dimensionality and gives invariance to small\n",
+            "distortions.\n",
+            "\n",
+            "For info on NIST preprocessing routines, see M. D. Garris, J. L. Blue, G.\n",
+            "T. Candela, D. L. Dimmick, J. Geist, P. J. Grother, S. A. Janet, and C.\n",
+            "L. Wilson, NIST Form-Based Handprint Recognition System, NISTIR 5469,\n",
+            "1994.\n",
+            "\n",
+            ".. topic:: References\n",
+            "\n",
+            "  - C. Kaynak (1995) Methods of Combining Multiple Classifiers and Their\n",
+            "    Applications to Handwritten Digit Recognition, MSc Thesis, Institute of\n",
+            "    Graduate Studies in Science and Engineering, Bogazici University.\n",
+            "  - E. Alpaydin, C. Kaynak (1998) Cascading Classifiers, Kybernetika.\n",
+            "  - Ken Tang and Ponnuthurai N. Suganthan and Xi Yao and A. Kai Qin.\n",
+            "    Linear dimensionalityreduction using relevance weighted LDA. School of\n",
+            "    Electrical and Electronic Engineering Nanyang Technological University.\n",
+            "    2005.\n",
+            "  - Claudio Gentile. A New Approximate Maximal Margin Classification\n",
+            "    Algorithm. NIPS. 2000.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Simulated Dataset"
+      ],
+      "metadata": {
+        "id": "_VA7fR_7kOH0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gXOq6HEdkOy8"
       },
       "execution_count": null,
       "outputs": []
